deployment-strategies/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
        - name: cont1
          image: shaikmustafa/mytetrisgame:v1
          ports:
            - containerPort: 3000
