deployment-strategies/blue-green-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bg-svc
spec:
  type: LoadBalancer
  selector:
    app: v1
  ports:
    - port: 80
      targetPort: 3000
