deployment-strategies/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v1
        weight: 10
      - destination:
          host: reviews
          subset: v2
        weight: 0
      - destination:
          host: reviews
          subset: v3
        weight: 100
